# walkmap

./: .gitignore  LICENSE  README.md
client/: package.json
client/public/: index.html
client/src/: App.css  App.tsx  MainMap.tsx  Sidebar.tsx  WalkMarker.d.ts
server/walkmap/: Cargo.toml  README.md  test.db
server/walkmap/migrations/2020-07-09-120819_create_maps/: up.sql
server/walkmap/migrations/2020-07-09-124908_create_tables/: down.sql  up.sql
server/walkmap/migrations/2020-07-09-172211_create_markers/: up.sql
server/walkmap/src/: actions.rs  main.rs  models.rs  schema.rs
