[package]
name = "walkmap"
version = "0.1.0"
authors = ["Kevin Teh <kkwteh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"

bytes = "0.5"
diesel = { version = "^1.4.6", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0" 
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
rand = "0.7.3"
r2d2 = "0.8"
r2d2_postgres = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
